--- a/src/scss/config/media.scss
+++ b/src/scss/config/media.scss
@@ -7,6 +7,14 @@
     background-size: 400%;
     background-position: 60% 76%;
   }
+  .contacts-bg {
+    background-position: center;
+    background-size: 300%;
+  }
+  .yoga-bg {
+    background-position: bottom;
+    background-size: 200%;
+  }
 }
 @media (min-width: 830px) {
   [class*='__container'] {
@@ -258,8 +266,165 @@
     height: 76px;
     font-size: 25px;
   }
+  .form-block {
+    &-2 {
+    }
+    &__headline {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: left;
+      max-width: 700px;
+    }
+  }
+  .contacts {
+    &__item {
+      font-size: 45px;
+      span {
+        font-size: 30px;
+      }
+    }
+    &__map {
+      height: 600px;
+    }
+    &__container {
+      gap: 50px;
+    }
+    &__top {
+      padding: 60px 0;
+    }
+  }
+  .title-block--gradient-2 {
+    .title-block__subtitle {
+      max-width: 500px;
+      font-size: 35px;
+      line-height: 40px;
+    }
+    .title-block__headline {
+      font-size: 45px;
+    }
+  }
+  .persons {
+    &__top {
+      padding-top: 80px;
+      gap: 50px;
+    }
+    &__subtitle {
+      font-size: 35px;
+    }
+    &__headline {
+      font-size: 45px;
+    }
+  }
+  .person__img-block {
+    max-width: 754px;
+  }
+  .person__img {
+    max-height: 754px;
+  }
+  .person {
+    &__inner {
+      margin-left: 0;
+      margin-right: auto;
+    }
+    &__name {
+      text-align: left;
+      margin-left: 0;
+      margin-right: auto;
+      font-size: 45px;
+    }
+    &__desc {
+      max-width: 550px;
+      font-size: 25px;
+      text-align: left;
+      margin-left: 0;
+      margin-right: auto;
+    }
+    &__btn {
+      margin-left: 0;
+      margin-right: auto;
+      margin-top: 40px;
+      height: 72px;
+      min-width: 210px;
+    }
+  }
+  .header-black {
+    .header__item.active .header__dropdown-btn {
+      color: #000;
+    }
+  }
+  .about-bg {
+    padding-top: 110px;
+    .main__container {
+      min-height: 340px;
+    }
+  }
+  .img-block {
+    height: 600px;
+  }
+  .about-page {
+    .packages {
+      padding-top: 80px;
+    }
+    .packages__headline {
+      font-size: 45px;
+    }
+  }
+  .relax__desc {
+    font-size: 35px;
+    max-width: 600px;
+    margin-top: 80px;
+  }
+  .relax__top {
+    padding: 80px 0;
+  }
+  .slider__item {
+    height: 1000px;
+  }
+  .book__text {
+    font-size: 35px;
+    max-width: 470px;
+    margin-left: auto;
+    margin-right: 0;
+    text-align: left;
+  }
+  .form-block--book {
+    .form-block__headline {
+      max-width: 300px;
+      margin-left: 0;
+    }
+  }
+  .relax__headline {
+    span {
+      font-size: 65px;
+      margin-left: -290px;
+      margin-bottom: 10px;
+    }
+    margin-left: 290px;
+    font-size: 65px;
+  }
 }
 @media (min-width: 1240px) {
+  .contacts-bg {
+    background-size: 180%;
+    background-position: 46% 51%;
+  }
+  .contacts {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    &__container {
+      justify-content: space-between;
+      height: 100%;
+      padding-left: 85px;
+    }
+    &__top {
+      padding: 120px 0 160px;
+    }
+    &__map {
+      height: 900px;
+      width: 50%;
+    }
+  }
   .header__item {
     font-size: 30px;
   }
@@ -563,6 +728,213 @@
       }
     }
     &__container {
+    }
+  }
+  .form-block {
+    &-2 {
+      .form-block__container {
+        display: grid;
+        grid-template-columns: 430px 1fr;
+        padding-bottom: 120px;
+        max-width: 1440px;
+        position: relative;
+      }
+      .form-block__btn {
+        position: absolute;
+        bottom: 0;
+        top: auto;
+        margin-top: 0;
+        transform: translateY(140%);
+        right: 0;
+      }
+      .input-block,
+      .form-block__text {
+        margin-left: 0;
+      }
+    }
+    &__headline {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: left;
+      margin-bottom: 0;
+      grid-area: 1 / 1 / 3 / 2;
+      max-width: 700px;
+    }
+  }
+  .packages-bg {
+    background-size: 240%;
+  }
+
+  .form-block-3 {
+    .form-block__headline {
+      grid-area: 1 / 1 / 2 / 2;
+      text-align: left;
+      margin-bottom: 100px;
+      margin-left: 0;
+    }
+    .form-block__btn {
+      position: relative;
+      transform: none;
+      grid-area: 1 / 2 / 4 / 3;
+    }
+    .form-block__container {
+      grid-template-columns: 1fr 240px;
+      padding-bottom: 0px;
+    }
+  }
+  .title-block--gradient-2 {
+    .title-block__headline {
+      font-size: 55px;
+    }
+    .title-block__subtitle {
+      font-size: 40px;
+      margin-top: 0;
+      line-height: 45px;
+    }
+    .title-block__container {
+      max-width: 1440px;
+    }
+  }
+  .persons {
+    &__subtitle {
+      font-size: 55px;
+    }
+    &__headline {
+      font-size: 65px;
+    }
+  }
+  .persons {
+    padding-bottom: 25px;
+  }
+  .person {
+    &__name {
+      font-size: 75px;
+    }
+    &__desc {
+      margin-top: 50px;
+      font-size: 28px;
+    }
+    &__img {
+      height: 660px;
+    }
+    &__img-block {
+      max-width: 660px;
+    }
+    &__item {
+      flex-direction: row;
+      gap: 80px;
+    }
+    &__btn {
+      margin-top: 90px;
+      font-size: 30px;
+      height: 85px;
+      padding-top: 24px;
+    }
+  }
+  .yoga-bg {
+    background-size: cover;
+  }
+  .img-block {
+    height: 960px;
+  }
+  .about-bg {
+    padding-top: 140px;
+  }
+  .about-bg .main__container {
+    min-height: 456px;
+  }
+  .about-page .packages__headline {
+    font-size: 65px;
+  }
+  .slider__item {
+    height: 800px;
+  }
+  .swiper-button-prev {
+    left: 40px;
+  }
+  .swiper-button-next {
+    right: 40px;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    bottom: 40px;
+    height: 80px;
+    width: 80px;
+    top: auto;
+    transform: none;
+    svg {
+      width: 47px;
+      height: 29px;
+    }
+  }
+  .relax {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: #efefef;
+    justify-content: center;
+    &__slider {
+      width: 720px;
+      overflow: hidden;
+    }
+    &__top {
+      width: 720px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      .relax__container {
+        padding-right: 10px;
+        margin-left: 0;
+      }
+    }
+    &__top::after {
+      transform: translateX(-100%) rotate(90deg);
+      left: 0;
+      right: auto;
+      width: 800px;
+      height: 800px;
+      top: 0;
+    }
+  }
+  .relax__headline {
+    font-size: 75px;
+    margin-left: 110px;
+  }
+  .relax__headline span {
+    font-size: 75px;
+    margin-left: -110px;
+  }
+  .relax__desc {
+    font-size: 40px;
+    margin-left: 115px;
+    margin-top: 50px;
+    line-height: 1;
+    max-width: 430px;
+  }
+  .book__btn {
+    font-size: 30px;
+    padding-top: 24px;
+    display: block;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: 240px;
+  }
+  .form-block--book {
+    padding-bottom: 120px;
+    .form-block__container {
+      max-width: 1440px;
+    }
+    .book__text {
+      font-size: 40px;
+      max-width: 500px;
+    }
+    .form-block__headline {
+      font-size: 55px;
+      max-width: 360px;
+    }
+    .form-block__btn {
+      align-self: flex-end;
+      transform: translateY(100%);
+      grid-area: 1/ 2 / 5 / 3;
     }
   }
 }
