--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -74,3 +74,130 @@
     height: 30px;
   }
 }
+@keyframes logo-2 {
+  0% {
+    background-image: url('../images/animLogo1.svg');
+  }
+  20% {
+    background-image: url('../images/animLogo2.svg');
+  }
+  40% {
+    background-image: url('../images/animLogo3.svg');
+  }
+  60% {
+    background-image: url('../images/animLogo4.svg');
+  }
+  80% {
+    background-image: url('../images/animLogo5.svg');
+  }
+  100% {
+    background-image: url('../images/animLogo5.svg');
+  }
+}
+@keyframes logo-3 {
+  0% {
+    background-image: url('../images/animLogo-bl1.svg');
+  }
+  20% {
+    background-image: url('../images/animLogo-bl2.svg');
+  }
+  40% {
+    background-image: url('../images/animLogo-bl3.svg');
+  }
+  60% {
+    background-image: url('../images/animLogo-bl4.svg');
+  }
+  80% {
+    background-image: url('../images/animLogo-bl5.svg');
+  }
+  100% {
+    background-image: url('../images/animLogo-bl5.svg');
+  }
+}
+@media (hover: hover) {
+  .footer__link {
+    &::after {
+      transition: all 0.2s ease-in;
+      content: '';
+      height: 1px;
+      width: 100%;
+      position: absolute;
+      left: -101%;
+      bottom: 0;
+      background-color: #000;
+    }
+    padding-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+    &:hover::after {
+      left: 0;
+    }
+  }
+  .header__logo {
+    position: relative;
+    &:hover::after {
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      content: '';
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-image: url('../images/animLogo1.svg');
+      animation: logo-2 2s linear infinite alternate;
+    }
+  }
+  .header-black {
+    .header__logo {
+      position: relative;
+      &:hover::after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        content: '';
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url('../images/animLogo-bl1.svg');
+        animation: logo-3 2s linear infinite alternate;
+      }
+    }
+  }
+  .header-black .header__item {
+    &::after {
+      background-color: #000;
+    }
+  }
+  .header__item {
+    position: relative;
+    overflow: hidden;
+    padding-right: 2px;
+    padding-bottom: 2px;
+    &.header__dropdown {
+      overflow: visible;
+      &::after {
+        display: none;
+      }
+    }
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      height: 1px;
+      width: 100%;
+      left: 0;
+      background-color: #fff;
+      transform: translateX(-101%);
+      transition: all 0.2s ease-in;
+    }
+    &:hover::after {
+      transform: none;
+    }
+  }
+}
