--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -79,6 +79,15 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  transition: all 0.3s ease-in;
+
+  &:hover {
+    background-image: url(../images/black-btn.svg) !important;
+    color: #fff;
+    svg * {
+      fill: #fff;
+    }
+  }
   padding: 20px;
   display: inline-block;
   min-width: 184px;
@@ -86,4 +95,32 @@
   &:hover {
     opacity: 0.9;
   }
+}
+
+.input-block input:active,
+.input-block input:focus {
+  & + .input-block__btn::before {
+    content: url(../images/arrow-white.svg);
+    max-width: 47px;
+    width: 100%;
+    max-height: 29px;
+    display: block;
+  }
+}
+.input-block.active::after {
+  background-image: url(../images/input-border-white.svg);
+}
+// .input-block:hover {
+//   .input-block__btn::before {
+//     content: url(../images/arrow-white.svg);
+//     max-width: 47px;
+//     width: 100%;
+//     max-height: 29px;
+//     display: block;
+//   }
+//   ::after {
+//   }
+//}
+.form-block input.form-block__input {
+  padding-right: 42px;
 }
