--- a/src/scss/config/media.scss
+++ b/src/scss/config/media.scss
@@ -476,6 +476,10 @@
     &__subtitle {
       margin-top: 40px;
     }
+    &__btn {
+      font-size: 30px;
+      line-height: 37px;
+    }
   }
   .btn {
     min-width: 260px;
